--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "http-status-codes": "^2.3.0"
+    "http-status-codes": "^2.3.0",
+    "node-ical": "^0.17.2",
+    "puppeteer": "^22.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
