--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "src/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node build/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "seed": "ts-node --transpile-only prisma/seed.ts",
+    "start": "node build/index.js"
   },
   "author": "Jani Mäenpää",
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
@@ -17,6 +19,7 @@
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "node-ical": "^0.17.2",
+    "prisma": "^5.9.1",
     "puppeteer": "^22.0.0"
   },
   "devDependencies": {
