--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "http-status-codes": "^2.3.0",
     "node-ical": "^0.17.2",
     "prisma": "^5.9.1",
-    "puppeteer": "^22.0.0"
+    "puppeteer": "^22.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
